--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "katsana/dusk-crawler",
+    "name": "lubeyag/dusk-crawler",
     "description": "Web Crawler using Laravel Dusk",
     "type": "library",
     "license": "MIT",
@@ -25,16 +25,16 @@
         }
     },
     "require": {
-        "php": ">=7.2",
+        "php": ">=8.0",
         "laravel/dusk": "^5.11 || ^6.0",
-        "orchestra/canvas-core": "^4.7 || ^5.0 || ^6.0",
+        "orchestra/canvas-core": "^4.7 || ^5.0 || ^6.0 || ^7.0",
         "orchestra/dusk-updater": "^1.2",
         "react/promise": "^2.7",
         "symfony/dom-crawler": "^4.3 || ^5.0"
     },
     "require-dev": {
-        "orchestra/canvas": "^4.5 || ^5.0 || ^6.0",
-        "orchestra/testbench": "^4.5 || ^5.0 || ^6.0"
+        "orchestra/canvas": "^4.5 || ^5.0 || ^6.0 || ^7.0",
+        "orchestra/testbench": "^4.5 || ^5.0 || ^6.0 || ^7.0""
     },
     "config": {
         "sort-packages": true
