--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "require-dev": {
         "orchestra/canvas": "^4.5 || ^5.0 || ^6.0 || ^7.0",
-        "orchestra/testbench": "^4.5 || ^5.0 || ^6.0 || ^7.0""
+        "orchestra/testbench": "^4.5 || ^5.0 || ^6.0 || ^7.0"
     },
     "config": {
         "sort-packages": true
